--- a/AllAboutDough/App.config
+++ b/AllAboutDough/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+
+  <connectionStrings>
+    <add name="AllAboutDoughConnection"
+     providerName="System.Data.ProviderName"
+     connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\AllAboutDoughData.mdf';Integrated Security=True"/>
+  </connectionStrings>
 </configuration>
